@startuml MDD
skinparam style strictuml
hide empty members

class Semester {
  name: string
  start: string
  end: string
}
class User {
  firstName: string
  lastName: string
  id: string
}

' traduction de groupe-cours est Section
class "CourseSection" as Group 

class Schedule {
  groupId: string
  day: string
  hours: string
  activity: string
  mode: string
  local: string
  teacherId: string
}

class Course {
  id: string
  titre: string
}

class Student extends User

class Teacher extends User

class "Mark" as Grade {
  studentId: string
  groupId: string
  type: string
  typeId: integer
  note: number
}

class University

Course "1" -- "*" Group : Décrit >
Schedule "*" -- "1" Group : Offert selon <
Schedule "*" -- "1" Teacher : Enseigne dans un group cours selon <
Semester "1" -- "*" Schedule: Offre des groupe cours selon >
Grade "*" --  "1" Student: effectue des\n travaux pour obtenir <
Grade "*" -- "1" Group : demande la réalisation\nde travaux pour obtenir <
Teacher "1" -- "*" Course: est responsable de > 
Student "1" -- "*" Group : est inscrit >
University "1" -- "*" Teacher: emploie >
University "1" -- "*" Student: Offre des services >
University "1" -- "*" Semester: Gère >

@enduml
